creating chat UI

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
+.sender-message,
+.receiver-message {
+  min-width: 50%;
+}
 /* Imported stylesheets */
 
 /* pages css files */
-@import 'styles/pages/auth.css';
+@import "styles/pages/auth.css";
 
 /* components css files */
-@import 'styles/components/login.css';
-@import 'styles/components/register.css';
+@import "styles/components/login.css";
+@import "styles/components/register.css";
